--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,19 +4,18 @@
 #sonar.projectVersion=1.0
 
 # scan Apipagination
-sonar.projectKey=com.stefanini.sonarqube:java-Sysman-sq-scanner
-sonar.projectName=Java ::  Project Sysman Compiled :: SonarQube Scanner
+sonar.projectKey=com.stefanini.sonarqube:sql-Sysman-sq-scanner
+sonar.projectName=sql ::  Project Sysman Compiled :: SonarQube Scanner
 sonar.projectVersion=1.0
-
 
 # Comma-separated paths to directories with sources (required)
 #sonar.sources=core/Librerias/ClientWSO2-api/src
 # source Apipagination
 #sonar.sources=core/Librerias/ApiPagination/src
 #Kernel/sysmanUtil/src
-sonar.sources=core,Modulos,Kernel
+sonar.sources=PLSQL
 # Language
-sonar.language=java
+sonar.language=plsqlcop
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
