--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.projectVersion=1.0
 # source Apipagination
 #sonar.sources=core/Librerias/ApiPagination/src
 #Kernel/sysmanUtil/src
-sonar.sources=PLSQL
+sonar.sources=.
 # Language
 sonar.language=plsqlcop
 
